﻿Keyboard Shortcuts Manager
06-Mar-2022: v3.1.1 - Open Import Shortcuts dialog when offering to load ONE shortcuts file.
05-Mar-2022: v3.1.0 - Improve Import Shortcuts window - Fix bug with unchecking the shortcuts, Also C#/CSharp issue.
21-Nov-2021: v3.0.0 - Upgraded to VS2022
09-Jul-2019: v2.1.0 - Improvements to Import Shortcuts UI
08-Jul-2019: v2.0.1 - Added Async AutoLoad
14-Jun-2019: v2.0.0 - Upgraded to VS2019
21-Apr-2018: v1.0.9 - Fixed extension icon packaging.
21-Apr-2018: v1.0.8 - Removed intermediate UI for Import shortcuts feature.
20-Apr-2018: v1.0.7 - Implemented Import VSK feature.
12-Jan-2018: v1.0.6 - Moved DefaultShortcuts vssettings out of top level so it's not discovered by the scanner.
02-Jan-2018: v1.0.4 - Detects new/updated extensions on startup and kicks off scan.
27-Dec-2017: v1.0.3 - Includes extension scanning (on demmand). Provides UI for naming saved shortcuts.
14-Dec-2017: v1.0.2 - Implemented Reset operation. Provides file picker for Restore.
20-Nov-2017: v1.0.1 - Includes mapping scheme selector
03-Nov-2017: v1.0.0 - Initial release