@@ -122,7 +122,7 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Resources\DefaultShortcuts.vssettings">
+    <Content Include="Resources\ResetShortcuts.vssettings">
       <IncludeInVSIX>true</IncludeInVSIX>
       <SubType>Designer</SubType>
     </Content>
