@@ -1,4 +1,5 @@
 ﻿Keyboard Shortcuts Manager
+06-Mar-2022: v3.1.2 - Try to catch errors when loading shortcuts before the package is initialised.
 06-Mar-2022: v3.1.1 - Open Import Shortcuts dialog when offering to load ONE shortcuts file.
 05-Mar-2022: v3.1.0 - Improve Import Shortcuts window - Fix bug with unchecking the shortcuts, Also C#/CSharp issue.
 21-Nov-2021: v3.0.0 - Upgraded to VS2022
